# open_webui_knowledge_sync

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli.cmd  pyproject.toml  ruff.toml  sync.cmd  watch.cmd
docs/: sync-readme.md  watch-readme.md
open_webui_knowledge_sync/: __init__.py  __main__.py  constants.py  env.py  logging_config.py
open_webui_knowledge_sync/backends/: __init__.py  filesystem.py
open_webui_knowledge_sync/backends/openwebui/: __init__.py  files.py  knowledge.py
open_webui_knowledge_sync/entrypoints/: __init__.py  cli.py  sync.py  watch.py
open_webui_knowledge_sync/models/: __init__.py  files.py  knowledge.py  user.py
open_webui_knowledge_sync/tests/: __init__.py  test_filesystem.py
