[project]
name = "open-webui-knowledge-sync"
version = "0.1.3"
description = "Python CLI tool for synchronizing local files with Open WebUI knowledge bases."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "typer>=0.15.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
#    "open-webui>=0.6.15",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.11.3",
]

[project.scripts]
owui_sync = "open_webui_knowledge_sync.entrypoints.sync:app"
owui_watch = "open_webui_knowledge_sync.entrypoints.watch:app"

[tool.uv]
package = true
default-groups = []
